src/main/webapp/sass/Portal.scss
@mixin border-radius($radius) {
	-webkit-border-radius: $radius;
	-moz-border-radius: $radius;
	-ms-border-radius: $radius;
	border-radius: $radius;
	-o-border-radius: $radius;
	-khtml-border-radius: $radius;
}

@mixin box-shadow($boxshadow) {
	-webkit-box-shadow: $boxshadow;
	-moz-box-shadow: $boxshadow;
	box-shadow: $boxshadow;
}

/***************
Synapse color scheme
****************/
$synapse-green: #62AC62;
$synapse-blue: #2B688F;
$synapse-blue-end-gradient: #164B6E;
$synapse-purple: #7772b4;
$synapse-yellow: #F2C94C;
$synapse-orange: #E8762B;
$synapse-accent-primary: #56CCF2;

.colored { color:$synapse-blue;}
.link { color:$synapse-blue;}
.link, .link:visited, .link:hover {  color:$synapse-blue; }
.link:hover { text-decoration: underline; cursor:pointer;}
a {color:$synapse-blue;text-decoration:none;}
a:visited{color:$synapse-blue; text-decoration:none;}
a:hover{color:$synapse-blue; text-decoration:underline;}
a:focus{color:$synapse-blue; text-decoration:underline;}
.synapse-yellow, #body .synapse-yellow {color:$synapse-yellow;}
.synapse-blue, #body .synapse-blue {color:$synapse-blue;}
.synapse-purple, #body .synapse-purple {color:$synapse-purple;}
.synapse-green, #body .synapse-green {color:$synapse-green;}

.synapse-yellow-bg, #body .synapse-yellow-bg {background-color:$synapse-yellow;}
.synapse-blue-bg, #body .synapse-blue-bg {background-color:$synapse-blue;}
.synapse-purple-bg, #body .synapse-purple-bg {background-color:$synapse-purple;}
.synapse-green-bg, #body .synapse-green-bg {background-color:$synapse-green;}
.synapse-orange-bg, #body .synapse-orange-bg {background-color:$synapse-orange;}
.synapse-accent-primary-bg, #body .synapse-accent-primary-bg {background-color:$synapse-accent-primary;}

.synapse-blue-bg-gradient, #body .synapse-blue-bg-gradient {
	background: linear-gradient(180deg, $synapse-blue 0%, $synapse-blue-end-gradient 100%);
}
.pagination>li>a, .pagination>li>span {
	color: $synapse-blue;
}

.dot {
	height: 7px;
	width: 7px;
	border-radius: 50%;
	display: inline-block;
}

body {
	overflow-y: auto
}
/* Prevent body from scrolling when modal is open
http://stackoverflow.com/questions/9538868/prevent-body-from-scrolling-when-a-modal-is-opened
*/
body.modal-open {
	overflow: hidden;
}

/**
sticky footer
**/
#rootPanel {
  /** set the min height of the root panel to subtract the height of the header and footer **/
	min-height: calc(100vh - 50px);
	color:#666666;
	font-size:1em;
	line-height:1.6em;
}
/**
end sticky footer
**/

@media (min-width: 1500px) {
	th.visible-xl, td.visible-xl {
		display: table-cell !important;
	}	
}
.visible-xl{
	display:none !important;
}

.btn-link {
	color: $synapse-blue;
}

/* Bootstrap overrides */
#rootPanel .panel {
	border: 1px solid transparent;
	box-shadow: none;
}
#rootPanel .panel-body {
	padding: 15px 0 30px 0;
}
#rootPanel .nav-tabs {
	border-bottom: 1px solid #e6e6e6;
	padding-bottom: 3px;
}
#rootPanel {
	.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
		border: none;
	}
}

#rootPanel .nav-tabs > li > a {
	box-shadow: none;
}
#rootPanel .nav-tabs > li.active > a, #rootPanel .nav-tabs > li > a:hover {
	box-shadow: inset 0 -2px 0 #1e7098
}
.btn-primary {
	color: #fff !important;
}

a.btn-primary {
	color: #fff !important;
}

.overflow-y-auto {
	overflow-y: auto;
}

.sf-j-menu {
	float: right !important;
	margin-bottom: 1em;
	margin-top: 2em;
	font-size:10px;
	font-family:Oswald;
}

.sf-j-menu td {
	padding: 5px 0px 4px 15px;
	vertical-align: middle !important;
}

.header-inner-commands-container {
	border-radius: 0.2em;
	height: 23px;
}
.header-inner-commands-container td {
	padding: 3px 7px 3px 7px;
}

.margin-right-3-buttons 
>button {
	margin-right: 3px;
}

.md-command-bar>button {
	margin: 2px 3px 2px 0px;
}
.md-command-bar>div {
	margin: 2px 3px 2px 0px;
}

.header-username-picture-container {
	border: solid #ccc;
	border-width:0.1em;
	border-radius:0.4em;
}
.header-username-picture-container td {
	padding: 2px 4px 2px 3px;
}

.light-border {
	border: solid #ccc;
	border-width:0.1em;
	border-radius:0.4em;
	padding: 2px 4px 2px 3px;
}

.light-border-bottom {
	border-bottom: 1px solid #f1f1f1;
}

.sendButton {
	display: block;
	font-size: 16pt;
}

/** Most GWT widgets already have a style name defined */
.gwt-DialogBox {
	width: 400px;
}

.dialogVPanel {
	margin: 5px;
}

.serverResponseLabelError {
	color: red;
}

/** Set ids using widget.getElement().setId("idOfElement") */
#closeButton {
	margin: 15px 6px 6px;
}

.cellTableHyperLinkColumn {
	border: 1px solid black;
	font-size: 2em;
	font-weight: bold;
	color: blue;
	text-align: right;
}

.datasetLayerColumn {
	text-align: left;
	width: 0px;
}

.text-align-left {
	text-align: left;
}

.mainPageHeader {
	border: 1px solid black;
	padding: 10px;
}

.mainPageLoading {
	border: 0;
	padding: 10px;
}

.boldRight {
	text-align: left;
	width: 100px;
	color: #939598;
	font-size: 11px;
}

.nobordertable-imp td {
  border: 0px !important;
  padding: 0px;
}
.nobordertable-imp th {
  border: 0px !important;
  padding: 0px;
}

.downloadLink,.downloadLink:hover,.downloadLink:visited { text-decoration:underline; margin-left:5px;}

/* header links. transition from grey to black on hover, don't underline */
.headerLink { line-height: 25px; font-size: 13px; font-weight: bold; padding: 0px 2px 0px 4px;
  -webkit-transition:.2s;
  transition:.2s; }
.headerLink:hover { color: #3a5bdc; text-decoration:none; }

.headerUsernameLink { 
	font-weight: bold; 
	color: #6e6e6e !important; 
	padding: 0px 2px 0px 0px; 
	text-align: left;
}

.usernameLink { 
	padding: 0px 2px 0px 0px; 
	text-align: left;
}

/* Removes annoying FireFox dotted border */
:focus {
	outline: none;
}

.imageButton, .gwt-Anchor, .previewDisclosureFace {
	cursor: pointer;
}

/* File browser input box needs more fine-tuned selector for override*/
.border-none, input[type=text][readonly].border-none, #body .border-none {
	border: none;
}
/* ... */

